--- a/web/.htaccess
+++ b/web/.htaccess
@@ -187,3 +187,7 @@ AddEncoding gzip svgz
   # Disable Proxy header, since it's an attack vector.
   RequestHeader unset Proxy
 </IfModule>
+
+# Customizations
+php_value upload_max_filesize 10M
+php_value post_max_size 10M
